--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Menu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   
 </head>
 
